# NextTodo

./: .drone.yml  Dockerfile  README.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  vite-env.d.ts
frontend/src/api/: agenda.ts  task.ts
frontend/src/components/agenda/: AgendaCard.vue  EditAgenda.vue
frontend/src/components/common/: MilkdownEditor.vue
frontend/src/components/graph/: TaskGarph.vue  TaskNode.vue
frontend/src/components/task/: CardTask.vue  EditTask.vue  ExhibitListItem.vue
frontend/src/lib/: agenda.ts  graph_position.ts  status.ts  task.ts  task_relate.ts
frontend/src/router/: index.ts
frontend/src/store/: agenda.ts  config.ts
frontend/src/views/: AgendaView.vue  SiderMenu.vue  TaskDetail.vue  TaskList.vue
server/: .env  .gitignore  Cargo.toml  README.md
server/api/: Cargo.toml
server/api/src/: graph_position.rs  lib.rs  task_relate.rs
server/api/src/agenda_api/: mod.rs
server/api/src/task_api/: mod.rs
server/common/src/: time.rs
server/entity/: Cargo.toml
server/entity/src/: agenda.rs  graph_position.rs  label.rs  label_agenda.rs  label_task.rs  lib.rs  status.rs  task.rs  task_relate.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230724_162059_create_task.rs  m20230801_154847_create_agenda.rs  m20231013_133806_create_task_relate.rs  m20231030_151524_graph_position.rs  m20231105_125014_label.rs  m20231105_125510_step.rs  m20231105_125744_status.rs  models.rs
server/service/: Cargo.toml
server/service/src/: lib.rs
(+9 files in other folders)
