[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
service = { path = "../service"}
migration = { path = "../migration" }

tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
salvo = { version = "0.49", features = ["affix", "serve-static"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = "1.0.175"
serde_json = "1.0.102"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
